--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,25 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.5.2
+Date: 2024-12-8
+  Info:
+    - Clean up unnecessary planetary resources
+    - Optimize icons and text
+---------------------------------------------------------------------------------------------------
+Version: 0.5.1
+Date: 2024-12-6
+  Info:
+    - Change the minimum distance to 1.
+---------------------------------------------------------------------------------------------------
+Version: 0.5.0
+Date: 2024-12-6
+  Info:
+    - Add a custom option for the galaxy travel distance.
+---------------------------------------------------------------------------------------------------
+Version: 0.4.2
+Date: 2024-12-6
+  Info:
+    - Shorten the route distance; the current distance is a bit excessive. My apologies.
+---------------------------------------------------------------------------------------------------
 Version: 0.4.1
 Date: 2024-12-5
   Info:
