--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,14 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.7.1
+Date: 2024-12-24
+  Info:
+    - Fix compatibility with Factorissimo 3.
+---------------------------------------------------------------------------------------------------
+Version: 0.7.0
+Date: 2024-12-9
+  Info:
+    - Add an option to enable or disable interstellar travel routes (enabled by default)
+---------------------------------------------------------------------------------------------------
 Version: 0.6.0
 Date: 2024-12-9
   Info:
